<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="application_name">Blink</string>
    <string name="application_fullname">Blink Browser</string>
    <string name="umeng_appkey">5908c5e96e27a431db000baa</string>
    <string name="server_url">http://api.browser.fly2tech.com/</string>
    <string name="common_url">http://api.fly2tech.com/</string>
    <string name="download_web_icons_url">http://tcl-icloudcdn.tclclouds.com/mig-portal/mig-portal/browser/hot_web_icons.zip</string>
    <string name="uploads_disabled">File uploads are disabled.</string>
    <string name="new_tab">New tab</string>
    <string name="new_incognito_tab">New incognito tab</string>
    <string name="tab_snapshots">Saved pages</string>
    <string name="removed_from_bookmarks">Removed from bookmarks.</string>
    <string name="sign_in_to">Sign in to %1$s \"%2$s\"</string>
    <string name="username">Name</string>
    <string name="password">Password</string>
    <string name="action">Sign in</string>
    <string name="bookmarks_add_page">Save bookmark</string>
    <string name="bookmarks_search">Browser</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="select">Select</string>
    <string name="modify">Modify</string>
    <string name="add_to_homepage">Add to homepage</string>
    <string name="add_to_desktop">Desktop</string>
    <string name="rename">Rename files</string>
    <string name="copy_link">Copy link</string>
    <string name="share">Share</string>
    <string name="most_visited">Most visited</string>
    <string name="allow">Allow</string>
    <string name="go_back">Go back</string>
    <string name="undo">Undo</string>
    <string-array name="bookmarks" translatable="false"></string-array>
    <string name="bookmark_list">Bookmarks</string>
    <string name="go">Go</string>
    <string name="clear">Clear</string>
    <string name="clear_default_browser">Clear setting as default browser</string>
    <string name="already_cleared">Cleared</string>
    <string name="open">Open</string>
    <string name="history">History</string>
    <string name="remember_preference">Remember preference</string>
    <string name="block">Block</string>
    <string name="clear_data_success">Clear success</string>
    <string name="exit">Exit</string>
    <string name="no_thanks">NO, thanks</string>
    <string name="clear_all">Clear all</string>
    <string name="later">Later</string>
    <string name="enable">Enable</string>
    <string name="page_info">Page info</string>
    <string name="page_info_view">View page info</string>
    <string name="page_info_address">Address:</string>
    <string name="ssl_warnings_header">There are problems with the security certificate for this site.</string>
    <string name="ssl_continue">Continue</string>
    <string name="security_warning">Security warning</string>
    <string name="view_certificate">View certificate</string>
    <string name="ssl_certificate">Security certificate</string>
    <string name="ssl_untrusted">This certificate isn\'t from a trusted authority.</string>
    <string name="ssl_mismatch">The name of the site doesn\'t match the name on the certificate.</string>
    <string name="ssl_expired">This certificate has expired.</string>
    <string name="ssl_not_yet_valid">This certificate isn\'t valid yet.</string>
    <string name="ssl_date_invalid">This certificate has an invalid date.</string>
    <string name="ssl_invalid">This certificate is invalid.</string>
    <string name="ssl_certificate_is_valid">This certificate is valid.</string>
    <string name="ssl_unknown">Unknown certificate error.</string>
    <string name="stopping">Stopping\u2026</string>
    <string name="location">Address</string>
    <string name="account">Account</string>
    <string name="containing_folder">Add to</string>
    <string name="new_folder">New folder</string>
    <string name="edit_folder">Edit folder</string>
    <string name="delete_folder">Delete folder</string>
    <string name="no_subfolders">No subfolders.</string>
    <string name="add_to_homescreen_menu_option">Home screen</string>
    <string name="add_to_other_folder_menu_option">Other folder</string>
    <string name="name">Label</string>
    <string name="http">http://</string>
    <string name="bookmark_this_page">Bookmark this page</string>
    <string name="remove">Remove</string>
    <string name="edit_bookmark">Edit bookmark</string>
    <string name="create_shortcut_bookmark">Add shortcut to home</string>
    <string name="remove_bookmark">Delete bookmark</string>
    <string name="set_as_homepage">Set as homepage</string>
    <string name="bookmark_saved">Saved to bookmarks</string>
    <string name="bookmark_not_saved">Couldn\'t save bookmark</string>
    <string name="bookmark_needs_title">"Bookmark must have a name"</string>
    <string name="bookmark_needs_url">"Bookmark must have a location"</string>
    <string name="bookmark_url_not_valid">This URL isn\'t valid</string>
    <string name="bookmark_cannot_save_url">This URL can\'t be bookmarked</string>
    <string name="delete_bookmark_warning">Delete bookmark \"%s\"?</string>
    <string name="open_all_in_new_window">Open all in new tabs</string>
    <string name="select_dot">Select text</string>
    <string name="shortcut_bookmark">Bookmark</string>
    <string name="shortcut_bookmark_title">Choose a bookmark</string>
    <string name="contextheader_folder_bookmarkcount">%d bookmarks</string>
    <string name="contextheader_folder_empty">Empty folder</string>
    <string name="contextmenu_openlink_newwindow">Open in new tab</string>
    <string name="contextmenu_openlink_newwindow_background">Open in background</string>
    <string name="contextmenu_savelink">Save link</string>
    <string name="contextmenu_sharelink">Share link</string>
    <string name="contextmenu_copy">Copy</string>
    <string name="contextmenu_copylink">Copy link URL</string>
    <string name="contextmenu_download_image">Save image</string>
    <string name="contextmenu_view_image">View image</string>
    <string name="contextmenu_set_wallpaper">Set as wallpaper</string>
    <string name="contextmenu_dial_dot">Dial\u2026</string>
    <string name="contextmenu_add_contact">Add contact</string>
    <string name="contextmenu_send_mail">Send email</string>
    <string name="contextmenu_map">Map</string>
    <string name="choosertitle_sharevia">Share via</string>
    <string name="menu_preferences">Settings</string>
    <string name="pref_ad_block">AD Block</string>
    <string name="pref_ad_block_count">Clear Ad block history</string>
    <string name="pref_ad_block_count_summary">%d ads  blocked</string>
    <string name="pref_ad_block_count_dialog_message">Clear blocked ad count?</string>
    <string name="pref_restore_tabs_on_startup">Restore tabs on startup</string>
    <string name="pref_notification_tool_show">Show Search Bar in Notification Panel</string>
    <string name="pref_content_cookies">Enable cookies in incognito</string>
    <string name="pref_content_cookies_summary">Some sites require cookies to login or display normal.</string>
    <string name="pref_force_userscalable_summary">Override a website\'s request to control zoom behavior</string>
    <string name="pref_content_autofit">Auto-fit pages</string>
    <string name="pref_content_autofit_summary">Format webpages to fit the screen</string>
    <string name="pref_content_block_popups">Block pop-ups</string>
    <string name="pref_default_text_encoding">Text encoding</string>
    <string-array name="pref_default_text_encoding_choices">
        <item>Latin-1 (ISO-8859-1)</item>
        <item>Unicode (UTF-8)</item>
        <item>Chinese (GBK)</item>
        <item>Chinese (Big5)</item>
        <item>Japanese (ISO-2022-JP)</item>
        <item>Japanese (SHIFT_JIS)</item>
        <item>Japanese (EUC-JP)</item>
        
        <item>Korean (EUC-KR)</item>
        
    </string-array>
    <string-array name="pref_default_text_encoding_values" translatable="false">
        <item>Latin-1</item>
        <item>UTF-8</item>
        <item>GBK</item>
        <item>Big5</item>
        <item>ISO-2022-JP</item>
        <item>SHIFT_JIS</item>
        <item>EUC-JP</item>
        <item>EUC-KR</item>
    </string-array>
    <string name="pref_default_text_encoding_default" translatable="true">UTF-8</string>
    <string name="pref_extras_website_settings">Website settings</string>
    <string name="pref_extras_website_settings_summary">Advanced settings for individual websites</string>
    <string name="pref_content_search_engine">Set search engine</string>
    <string name="pref_search_engine_dialog_title">Choose engine</string>
    <string name="pref_web_browsing">Web browsing</string>
    <string name="pref_download_path_setting_screen_title">Custom download path</string>
    <string name="pref_privacy_security_title">Privacy &amp; Security</string>
    <string name="pref_privacy_security_title_summary">Allow the browser to remember passwords, saved forms, etc.</string>
    <string name="pref_privacy_clear_data">Clear data</string>
    <string-array name="pref_clear_data_choices">
        <item>Cache</item>
        <item>Cookies</item>
        <item>Forms</item>
        <item>History</item>
        <item>Passwords</item>
        <item>Location access</item>
    </string-array>
    <string-array name="pref_clear_data_values">
        <item>privacy_clear_cache</item>
        <item>privacy_clear_cookies</item>
        <item>privacy_clear_form_data</item>
        <item>privacy_clear_history</item>
        <item>privacy_clear_passwords</item>
        <item>privacy_clear_geolocation_access</item>
    </string-array>
    <string name="pref_default_browser">Set default browser</string>
    <string name="pref_confirm_on_exit">Confirm on exit</string>
    <string name="pref_about">About</string>
    <string name="pref_extras_reset_default">Reset to default</string>
    <string name="pref_extras_reset_default_dlg">Revert settings to default values?</string>
    <string name="pref_content_javascript">Enable JavaScript</string>
    <string name="accessibility_button_uaswitch">Switch user agent</string>
    <string name="pref_font_size">Text size</string>
    <string name="pref_font_size_summary">Adjust size of text and fonts</string>
    <string name="pref_force_userscalable">Force enable zoom</string>
    <string name="pref_security_accept_cookies">Accept cookies</string>
    <string name="pref_security_accept_cookies_summary">Allow sites to save and read cookie data</string>
    <string name="pref_privacy_enable_geolocation">Enable location</string>
    <string name="pref_privacy_enable_geolocation_summary">Allow sites to request access to your location</string>
    <string name="pref_security_save_form_data">Remember form data</string>
    <string name="pref_security_save_form_data_summary">Remember the data I entered in the form</string>
    <string name="pref_security_remember_passwords">Remember passwords</string>
    <string name="pref_security_remember_passwords_summary">Save usernames and passwords for websites</string>
    <string name="pref_security_show_security_warning">Show security warnings</string>
    <string name="pref_security_show_security_warning_summary">Show warning if there\'s a problem with a site\'s security</string>
    <string name="pref_download_with_ADM">Download with ADM</string>
    <string name="pref_show_download_dialog">Show download dialog</string>
    <string name="pref_download">Download settings</string>
    <string name="btn_recommend_add">Add</string>
    <string name="enter_website_name">Enter website name</string>
    <string name="pref_deverloper_options">Deverloper options</string>
    <string name="pref_lock_toolbar">Pin Toolbar</string>
</resources>