<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/edittext_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:paddingEnd="16dip"
            android:paddingLeft="16dip"
            android:paddingRight="16dip"
            android:paddingStart="16dip">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/bookmark_label_TextColor"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/title"
                style="@style/BrowserEditText"
                android:layout_width="fill_parent"
                android:layout_height="44dp"
                android:layout_marginTop="12dp"
                android:background="@null"
                android:ellipsize="end"
                android:hint="@string/enter_website_name"
                android:inputType="textCapSentences|textNoSuggestions"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/bookmark_edit_TextColor"
                android:textSize="@dimen/history_title_size" />

            <View
                android:id="@+id/add_link_line1"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/add_book_mark_line" />

            <TextView
                android:id="@+id/addressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="25dp"
                android:text="@string/location"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/bookmark_label_TextColor"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/address"
                style="@style/BrowserEditText"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="12dp"
                android:background="@null"
                android:ellipsize="end"
                android:hint="@string/http"
                android:inputType="textUri"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/bookmark_edit_TextColor"
                android:textSize="@dimen/history_title_size" />

            <View
                android:id="@+id/add_link_line2"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/add_book_mark_line" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_below="@+id/edittext_container"
            android:layout_marginBottom="90dp">

            <TextView
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="34dp"
                android:layout_marginRight="30dp"
                android:text="@string/btn_recommend_add"
                android:textAllCaps="true"
                android:textColor="#FF5DA7FD"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:layout_toLeftOf="@+id/ok"
                android:layout_toStartOf="@+id/ok"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="#FF5DA7FD"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <View
            android:id="@+id/mask"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="300dp"/>

    </RelativeLayout>

</ScrollView>
